--- a/frontend/user-gateway-UI/src/app/app.component.html
+++ b/frontend/user-gateway-UI/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="container bg-red">
-    <app-nav></app-nav>
-    <app-main></app-main>
+<div class="">
+  <router-outlet></router-outlet>
 </div>
