commit for add room-owner login page

--- a/frontend/user-gateway-UI/src/app/_common/nav/nav.component.html
+++ b/frontend/user-gateway-UI/src/app/_common/nav/nav.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" aria-label="Offcanvas navbar middle">
         <div class="container">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">
+                <img src="./assets/images/logos/main-logo.png" class="rounded-circle" alt="">
+              </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
