--- a/frontend/user-gateway-UI/src/app/_main/main-banner/main-banner.component.html
+++ b/frontend/user-gateway-UI/src/app/_main/main-banner/main-banner.component.html
@@ -6,9 +6,19 @@
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
     </div> 
     <div class="carousel-inner">
-      <div class="carousel-item active carousel-image bg-img-1"></div>
+      <!-- <div class="carousel-item active carousel-image bg-img-1"></div>
       <div class="carousel-item carousel-image bg-img-2"></div>
-      <div class="carousel-item carousel-image bg-img-3"></div>
+      <div class="carousel-item carousel-image bg-img-3"></div> -->
+
+      <div class="carousel-item active">
+        <img src="./assets/images/carousel-images/carousel-image-1.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="carousel-item ">
+        <img src="./assets/images/carousel-images/carousel-image-2.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="carousel-item ">
+        <img src="./assets/images/carousel-images/carousel-image-3.jpg" class="img-fluid" alt="">
+      </div>
 
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
